Style changes for header and aside

--- a/centreon/www/front_src/src/styles/_main.scss
+++ b/centreon/www/front_src/src/styles/_main.scss
@@ -1,4 +1,5 @@
 @import "partials/typography";
+@import "partials/variables";
 @import "partials/icons";
 @import "partials/header";
 @import "partials/side-nav";
