--- a/centreon/www/front_src/src/styles/partials/_icons.scss
+++ b/centreon/www/front_src/src/styles/partials/_icons.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot');
-  src:  url('../fonts/icomoon.eot') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf') format('truetype'),
-    url('../fonts/icomoon.woff') format('woff'),
-    url('../fonts/icomoon.svg') format('svg');
+  src:  url('./fonts/icomoon.eot');
+  src:  url('./fonts/icomoon.eot') format('embedded-opentype'),
+    url('./fonts/icomoon.ttf') format('truetype'),
+    url('./fonts/icomoon.woff') format('woff'),
+    url('./fonts/icomoon.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -27,82 +27,82 @@
 
 .icon-home:before {
   content: "\e904";
-  color: #009f97;
+  color: rgba(0, 159, 152, 1);
 }
 .icon-home:hover:before {
   content: "\e904";
-  color: #fff;
+  color: rgba(0, 146, 140, 1);
 }
 
 .icon-monitoring:before {
   content: "\e907";
-  color: #134563;
+  color: rgba(136, 189, 35, 1);
 }
 .icon-monitoring:hover:before {
   content: "\e907";
-  color: #fff;
+  color: rgba(97, 140, 60, 1);
 }
 
 .icon-reporting:before {
   content: "\e909";
-  color: #ffa200;
+  color: rgba(255, 162, 0, 1);
 }
 .icon-reporting:hover:before {
   content: "\e909";
-  color: #fff;
+  color: rgba(256, 148, 24, 1);
 }
 
 .icon-configuration:before {
   content: "\e902";
-  color: #2b9e93;
+  color: rgba(0, 159, 233, 1);
 }
 .icon-configuration:hover:before {
   content: "\e902";
-  color: #fff;
+  color: rgba(15, 145, 199, 1);
 }
 
 .icon-administration:before {
   content: "\e900";
-  color: #2b2d83;
+  color: rgba(43, 45,132, 1);
 }
 .icon-administration:hover:before {
   content: "\e900";
-  color: #fff;
+  color: rgba(44, 42,121, 1);
 }
 
 .icon-poller:before {
   content: "\e908";
-  color: #fff;
+  color: $white-color;
 }
 
 .icon-link:before {
   content: "\e906";
-  color: #000;
+  color: #232f39;
 }
 
 .icon-clock:before {
   content: "\e901";
-  color: #000;
+  color: #232f39;
 }
 
 .icon-database:before {
   content: "\e903";
-  color: #000;
+  color: #232f39;
 }
 
 .icon-hosts:before {
   content: "\e905";
-  color: #fff;
+  color: $white-color;
 }
 
 .icon-services:before {
   content: "\e90a";
-  color: #fff;
+  color: $white-color;
 }
 
 .icon-user:before {
   content: "\e90b";
-  color: #fff;
+  color: $white-color;
 }
 
 .iconmoon {
