Layout changes. Import variables. Change styles according to the document 'New header_issues'

--- a/centreon/www/front_src/src/styles/partials/_buttons.scss
+++ b/centreon/www/front_src/src/styles/partials/_buttons.scss
@@ -14,7 +14,7 @@
   cursor: pointer;
   &-green {
     color: #88b917;
-    border: 1px solid #597F00;
+    border: 1px solid $lime-centreon-darken;
     &:hover {
       color: $white-color;
       background-color: #88b917;
