--- a/centreon/www/front_src/src/styles/partials/_variables.scss
+++ b/centreon/www/front_src/src/styles/partials/_variables.scss
@@ -1,20 +1,20 @@
 /* Colors */
-
-$primary-color: #f17420;
-
-$secondary-light-color: #e5f5ff;      
-$secondary-color: #228fc7;
-$secondary-dark-color: #175690;
-
 $white-color: #ffffff;
-$gray-lightest-color: #eeeeee;
-$gray-lighter-color: #e0e0e0;
-$gray-light-color: #dedede;
-$gray-color: #c4c4c4;
-$gray-dark-color: #8E8E8E;
-$gray-darker-color: #979797;
-$gray-darkest-color: #515151;
 $black-color: #000000;
+
+$lime-centreon-primary: #84BD00;
+$green-centreon-primary: #43B02A;
+$turquoise-centreon-primary: #00A499;
+$lightblue-centreon-primary: #009FDF;
+$blue-centreon-primary: #0072CE;
+$darkblue-centreon-primary: #10069F;
+
+$lime-centreon-darken: #597F00;
+$green-centreon-darken: #27651A;
+$turquoise-centreon-darken: #007F77;
+$lightblue-centreon-darken: #005A7F;
+$blue-centreon-darken: #064166;
+$darkblue-centreon-darken: #09225C;
 
 $success-color: #20a11c;
 $notification-color: #fffeec;
