--- a/centreon/www/front_src/src/styles/partials/form/_form.scss
+++ b/centreon/www/front_src/src/styles/partials/form/_form.scss
@@ -80,7 +80,7 @@
   }
   &-title {
     font-size: 12px;
-    color: #009fdf;
+    color: $lightblue-centreon-primary;
     font-weight: 300;
     font-family: Roboto,sans-serif;
   }
@@ -99,7 +99,7 @@
       outline: none;
       box-sizing: border-box;
       cursor: pointer;
-      background-color: #009fdf;
+      background-color: $lightblue-centreon-primary;
       text-decoration: none;
       font-size: 10px;
       color: rgb(255,255,255);
@@ -108,7 +108,7 @@
       padding: 5px 33px;
       text-transform: uppercase;
       &:hover {
-        background: #009fdfbf;
+        background: $blue-centreon-primary;
       }
     }
   }
