--- a/centreon/www/front_src/src/styles/partials/_side-nav.scss
+++ b/centreon/www/front_src/src/styles/partials/_side-nav.scss
@@ -30,6 +30,9 @@
     .collapsed-items {
       display: none;
     }
+    .toggle-sidebar {
+      transform: rotateY(180deg)
+    }
   }
   .sidebar-logo-mini {
     display: none;
@@ -139,6 +142,14 @@ a {
       font-size: 0.75rem;
       vertical-align: middle;
     }
+    // &:first-child {
+    //   > a {
+    //     background-color: #009f98;
+    //     &:hover {
+    //       background-color: #009f98;
+    //     }
+    //   }
+    // }
   }
   
 }
@@ -195,6 +206,10 @@ a {
       background: url("./img/icons/aside-menu-arrows.png") no-repeat;
       background-position: 26px 5px;
       background-color: #f7f7f7;
+      &.img-none {
+        background: none;
+        background-color: #f7f7f7;
+      }
     }
   }
 }
